# advent_of_code-2025

./: .gitignore
day1/: Cargo.toml
day1/src/: main.rs
day2/src/: main.rs
day3/src/: main.rs
day3/src/utils/: file.rs
day4/src/: main.rs
day5/src/: main.rs
day6/: -  Cargo.toml
day6/src/: main.rs
