[package]
name = "day1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base62 = "2.0.3"
clap = { version = "4.5.21", features = ["derive"] }
regex = "1.11.1"
rustc-hash = "2.1.0"
strum = "0.26.3"
strum_macros = "0.26.4"

#![feature(collections)]
